fix: reduced padding on mobile

--- a/src/components/center.module.scss
+++ b/src/components/center.module.scss
@@ -4,6 +4,10 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 53rem;
-  padding: $font-size-h1;
+  padding: $padding;
   overflow: hidden;
+
+  @media (min-width: $phone-upper-boundary) {
+    padding: $font-size-h1;
+  }
 }
