--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -30,6 +30,10 @@
   position: relative;
   flex: 1 1 auto;
   height: $font-size-h3;
+  > * {
+    user-select: none;
+    pointer-events: none;
+  }
 }
 
 .leftTextInner {
@@ -63,4 +67,8 @@
   fill: $font-color-mid;
   @include link();
   padding-left: $padding;
+  > * {
+    user-select: none;
+    pointer-events: none;
+  }
 }
